--- a/filesharing/requirements.txt
+++ b/filesharing/requirements.txt
@@ -7,6 +7,7 @@ Flask-SeaSurf==0.3.1
 Flask-SQLAlchemy==2.5.1
 flask-talisman==0.8.1
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
