--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -6,8 +6,12 @@ COPY package*.json ./
 
 RUN npm install
 
+RUN groupadd appgroup && useradd -g appgroup appuser 
+
 COPY *.js ./
 
 EXPOSE 9999
+
+USER appuser
 
 CMD ["node", "server.js"]
