--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,5 +1,8 @@
 FROM node
-RUN apt-get update && apt-get install -y chromium
+
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+RUN echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list
+RUN apt-get update && apt-get install -y google-chrome-stable
 
 WORKDIR /app
 COPY package*.json ./
